--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ nav .fa-solid {
     }
 
     .about-content-text{
-        margin: 10px 7% 10px 10%;
+        margin: 10px 5% 10px 10%;
     }
 
     .about-container h1{
@@ -510,9 +510,18 @@ nav .fa-solid {
     }
 
     .btn{
-        margin-left: 25%;
+        margin-left: 26%;
+        
     }
+
 /* ----------------------- contact section --------------------- */
+
+    .contact-left h1{
+        
+        text-align: center;
+        margin-bottom: 60px;
+        font-size: 40px;
+    }
 
     .row{
         display:flex ;
@@ -522,8 +531,24 @@ nav .fa-solid {
         flex-basis: 100%;
     }
     .resume{
-        margin: 0;
+       margin-left: 0;
         
+    }
+    .social-media{
+        margin: 20px 0;
+        margin-bottom: -20px;
+    }
+    .contact-left p i{
+        margin-right: 15px;
+        margin-top:20px;
+        font-size:20px;
+    }
+    .contact-submit{
+        margin-top: 12px;
+        width: 165px;
+        text-align: center;
+        margin-left: 22%;
+      
     }
 }   
     
